Fixed padding in blog-section on mobile

--- a/app/assets/styles/modules/m-project-detail.styl
+++ b/app/assets/styles/modules/m-project-detail.styl
@@ -318,10 +318,11 @@ $margin-bottom = $margin * 4
 .m-project-blog
   margin 3.25rem 0
   .m-post-card
-    // max-height 60vh
     height inherit
-    padding 6.25rem
+    padding 2.25rem
     margin 0
+    @media screen and (min-width: $screen-sm)
+      padding 6.25rem
 
 
 // Module opinions
